--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "@nervosnetwork/ckb-sdk-core": "^0.32.0",
-    "@nervosnetwork/ckb-sdk-utils": "^0.32.0",
+    "@ckb-lumos/base": "^0.19.0",
+    "@ckb-lumos/config-manager": "^0.19.0",
+    "@ckb-lumos/lumos": "^0.19.0",
     "array-buffer-to-hex": "^1.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "@fidm/x509": "^1.2.0",
     "base64url": "^2.0.0",
     "body-parser": "^1.15.2",
+    "browserify": "^17.0.0",
     "cbor": "^3.0.3",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.15.4",
-    "iso-3166-1": "^1.1.0",
     "mongoose": "^5.9.19",
     "web3-utils": "^1.2.9"
   },
@@ -29,17 +29,12 @@
     "rollup-plugin-uglify": "^1.0.1"
   },
   "scripts": {
-    "build": "browserify static/js/view.js -o static/js/bundle.js"
+    "build": "browserify static/js/view.js -o static/js/bundle.js",
+    "server": "node app"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fido-alliance/"
+    "url": "git+https://github.com/lay2dev/ckb-webauthn-demo"
   },
-  "private": true,
-  "author": "Yuriy Ackermann <yuriy@fidoalliance.org> (https://jeman.de/)",
-  "bugs": {
-    "url": "https://github.com/fido-alliance//issues",
-    "email": "yuriy@fidoalliance.org"
-  },
-  "homepage": "https://github.com/fido-alliance/#readme"
+  "private": true
 }
